@startuml

title __MODEL's Class Diagram__\n

  package  {
    package ui.model {
      class AirportComboBoxModel {
          - airports : Airport[]
          - selected : Object
          + AirportComboBoxModel()
          + setSelectedItem()
          + getSelectedItem()
          + getSize()
          + getElementAt()
          + addListDataListener()
          + removeListDataListener()
      }
    }
  }
  

  package  {
    package ui.model {
      class FlightSearchModel {
          {static} + AIRPORT_PROPERTY : String
          - support : PropertyChangeSupport
          - airports : Airport[]
          - departureDate : Date
          - costBased : boolean
          + FlightSearchModel()
          + addPropertyChangeListener()
          + removePropertyChangeListener()
          + setAirports()
          + getDepartureDate()
          + setDepartureDate()
          + getDepartureAirport()
          + setDepartureAirport()
          + getDestinationAirport()
          + setDestinationAirport()
          + isCostBased()
          + setCostBased()
          + updateAirports()
          + searchForFlight()
      }
    }
  }
  

  package  {
    package ui.model {
      class FlightSearchResultsTableModel {
          - columnNames : String[]
          ~ routes : ArrayList<Route>
          + FlightSearchResultsTableModel()
          + getRowCount()
          + getColumnCount()
          + getColumnName()
          + getValueAt()
      }
    }
  }
  

  package  {
    package ui.model {
      class LoginModel {
          - username : String
          - password : String
          + LoginModel()
          + setUsername()
          + setPassword()
          + login()
      }
    }
  }
  

  package  {
    package ui.model {
      class RegisterModel {
          - userName : String
          - email : String
          - password : String
          + RegisterModel()
          + setUserName()
          + setEmail()
          + setPassword()
          + createUser()
      }
    }
  }
  

  package  {
    package ui.model {
      class Validator {
          + validateEmail()
          + validatePassword()
          + validateName()
      }
    }
  }
  

  AirportComboBoxModel -up-|> ComboBoxModel
  FlightSearchModel o-- Airport : departureAirport
  FlightSearchModel o-- Airport : destinationAirport
  FlightSearchResultsTableModel -up-|> AbstractTableModel
  LoginModel o-- Validator : validator
  RegisterModel o-- Validator : validator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
